# remarkable-python

./: LICENSE  README.md  pyproject.toml
remarkable_python/: auth_credentials.py  client.py  const.py  content_metadata.py  document.py  document_factory.py  document_metadata.py  utils.py
remarkable_python/models/: index.py  index_entry.py
test/data/: directory_index.txt  file_index.txt
test/models/: test_index.py  test_index_entry.py
